# Legion-LOQ-control

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  LegionLoqControl.sln  README.md  SAFETY.md  SECURITY.md  TROUBLESHOOTING.md  build.cmd  build.rs  build_err.txt  build_log.txt  check_log.txt  error.txt  error_ascii.txt  gui_build_error.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  codeql.yml  release.yml  stale.yml
LegionLoqControl/: App.xaml  App.xaml.cs  LegionLoqControl.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
LegionLoqControl.Core/: Class1.cs  LegionLoqControl.Core.csproj
LegionLoqControl.Core/Device/: DeviceDetector.cs
LegionLoqControl.Core/Extensions/: ManagementObjectSearcherExtensions.cs
LegionLoqControl.Core/Hardware/: BatteryController.cs  CustomModeController.cs  EnergyDriver.cs  LightingController.cs  PowerController.cs  SpectrumKeyboardController.cs
LegionLoqControl.Core/Native/: NativeMethods.cs
LegionLoqControl.Core/System/: Drivers.cs
LegionLoqControl.Core/System/Management/: WMI.cs  (+6 more)
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md  SUPPORTED_MODELS.md
rust_prototype/: legion-loq-control.exe.manifest
src/: main.rs
src/Legion_backup_src/: main.rs
src/core/: mod.rs
src/gui/: app.rs
src/platform/: windows.rs
(+18 files in other folders)
